--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "client": "cd frontend && npm start",
+    "start": "concurrently \"nodemon app.js\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "apollo-server-express": "^3.3.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^6.2.1",
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
