--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd frontend && npm start",
-    "start": "concurrently \"nodemon app.js\" \"npm run client\""
+    "start": "concurrently \"nodemon app.js\" \"npm run client\"",
+    "postinstall": "cd frontend && npm install"
   },
   "author": "",
   "license": "ISC",
